# traffic-sign-detection

./: .gitignore  LICENSE  README.md  traffic-sign-detection.pro
doc/: superelipse_formulation.ggb
src/: CMakeLists.txt  Constante.h  SuperFormula.cpp  SuperFormula.h  colorConversion.cpp  colorConversion.h  imageProcessing.cpp  imageProcessing.h  main.cpp  math_utils.h  random-standalone.h  segmentation.cpp  segmentation.h  smartOptimisation.cpp  smartOptimisation.h
src/apps/: CMakeLists.txt  main.cpp
src/cmake/: buildTargets.cmake  compilerDefOpt.cmake  findDependencies.cmake  options.cmake  paths.cmake  printInfo.cmake
src/common/: CMakeLists.txt  SuperFormula.cpp  SuperFormula.h  colorConversion.cpp  colorConversion.h  imageProcessing.cpp  imageProcessing.h  math_utils.h  random-standalone.cpp  random-standalone.h  segmentation.cpp  segmentation.h  smartOptimisation.cpp  smartOptimisation.h  timer.cpp  timer.h
src/img_processing/: CMakeLists.txt  colorConversion.cpp  colorConversion.h  contour.cpp  contour.h  imageProcessing.cpp  imageProcessing.h  segmentation.cpp  segmentation.h
src/optimization/: CMakeLists.txt  SuperFormula.cpp  SuperFormula.h  smartOptimisation.cpp  smartOptimisation.h
src/tests/: CMakeLists.txt  tests_all.cpp
src/tests/integration/: CMakeLists.txt  test_integration.cpp
src/tests/unit/: CMakeLists.txt
src/tests/unit/common/: test_math.cpp
src/tests/unit/img_processing/: test_color_conversion.cpp  test_filtering.cpp  test_init_opt.cpp  test_segmentation.cpp
